change form format and add vendor

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -10,27 +10,31 @@
         <tbody>
         <tr>
             <th>編號</th>
+            <th>廠商</th>
             <th>年份</th>
             <th>車名</th>
             <th>最新價錢</th>
-            <th>上架日期</th>
-            <th>最後更新日期</th>
-            <th>賣出花費天數</th>
             <th>車輛照片</th>
             <th>配備參考</th>
+            <th>上架日期</th>
+            <th>最後更新日期</th>
+            <th>是否賣出</th>
+            <th>賣出花費天數</th>
         </tr>
         <!--/*@thymesVar id="car" type="com.andy.grepcarinfo.model.Car"*/-->
         <!--/*@thymesVar id="carList" type="java.util.List"*/-->
         <tr th:each="car, status : ${carList}">
             <td th:text="${status.index + 1}">1</td>
+            <td th:text="${car.getVendor}">小施</td>
             <td th:text="${car.getYear}">2020/2020</td>
             <td th:text="${car.getName}">Focus</td>
             <td><span th:text="${car.getLatestPrice}? ${car.getLatestPrice} + '萬': '-'">12.3萬</span></td>
-            <td th:text="${#dates.format(car.getInitTime, 'yyyy/MM/dd/')}">2021/02/20</td>
-            <td th:text="${#dates.format(car.getUpdateTime, 'yyyy/MM/dd/')}">2021/02/21</td>
-            <td><span th:text="${car.getDayOfSold} ? ${car.getDayOfSold} + '天' : '-'">1天</span></td>
             <td><span th:if="${car.getPicUrl} != null"><a target="_blank" th:href="${car.getPicUrl}">照片</a></span></td>
             <td><span th:if="${car.getPicUrl} != null"><a target="_blank" th:href="${car.getNewCarUrl}">參考</a></span></td>
+            <td th:text="${#dates.format(car.getInitTime, 'MM/dd')}">02/20</td>
+            <td th:text="${#dates.format(car.getUpdateTime, 'MM/dd')}">02/21</td>
+            <td th:text="${car.isSold?'Ｏ':'-'}">Ｏ</td>
+            <td><span th:text="${car.getDayOfSold} ? ${car.getDayOfSold} + '天' : '-'">1天</span></td>
         </tr>
         </tbody>
     </table>
