fix: grep info format and add update date to list page

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -5,6 +5,7 @@
     <title>List Car</title>
 </head>
 <body>
+    <div>最後更新日: <span th:text="${updateDate}">2021/03/08</span></div>
     <div>
         <table border="solid" >
         <tbody>
